# yemek-telegram-bot

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/application/interactors/: clear_messages.py  food_menu_fetch.py  food_menu_for_specific_day.py  track_usage.py
src/application/ports/gateways/: food_menu_items.py  telemetry.py
src/bootstrap/config/: settings.py
src/bootstrap/ioc/: registry.py
src/bootstrap/ioc/di_providers/: food_menu_infrastructure.py  sqla_persistence_infrastructure.py  telemetry_infrastructure.py
src/domain/: entities.py
src/domain/services/: date.py  food_menu.py
src/infrastructure/: cache.py  cleaner.py  food_menu.py  telemetry.py  usage_statistics.py
src/infrastructure/adapters/: food_menu_api.py  food_menu_items.py  telemetry.py
src/infrastructure/sqla_persistence/models/: food_menu_item.py  usage.py
src/presentation/callback_data/: food_menu.py
src/presentation/middlewares/: access.py  common.py  group_chat_warning.py
src/presentation/periodic_tasks/: clear_messages.py  prefetch_food_menu.py
src/presentation/telegram_handlers/: __init__.py  food_menu.py  help.py
src/presentation/ui/views/: base.py  food_menu.py
