[project]
name = "yemek-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "apscheduler>=3.11.0",
    "dishka>=1.5.3",
    "psycopg[binary]>=3.2.6",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.40",
]
